--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -1,12 +1,183 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
+      <style>
+          #map { height:1050px;}
+      </style>
   </head>
-	  <script src="http://code.jquery.com/jquery-latest.min.js"></script> 
+	  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	  <script src="https://maps.googleapis.com/maps/api/js"></script>
   <script>
-      function initialize() {
+		var route = {{route|tojson}};
+		var on_route = {{on_route|tojson}};
+		var circles = {{circles|tojson}};
+var steps= [{'lat':"52.273050",'lon':"4.943122"},
+{'lat':"52.273448",'lon':"4.943038"},
+{'lat':"52.273683",'lon':"4.943139"},
+{'lat':"52.274980",'lon':"4.942378"},
+{'lat':"52.275258",'lon':"4.942128"},
+{'lat':"52.275279",'lon':"4.942101"},
+{'lat':"52.275293",'lon':"4.942082"},
+{'lat':"52.275368",'lon':"4.942045"},
+{'lat':"52.278379",'lon':"4.939583"},
+{'lat':"52.278708",'lon':"4.939122"},
+{'lat':"52.278989",'lon':"4.939322"},
+{'lat':"52.279199",'lon':"4.938579"},
+{'lat':"52.279333",'lon':"4.937382"},
+{'lat':"52.279397",'lon':"4.937191"},
+{'lat':"52.280001",'lon':"4.936169"},
+{'lat':"52.280229",'lon':"4.935353"},
+{'lat':"52.280582",'lon':"4.933755"},
+{'lat':"52.280352",'lon':"4.931840"},
+{'lat':"52.279937",'lon':"4.930466"},
+{'lat':"52.279378",'lon':"4.929052"},
+{'lat':"52.279310",'lon':"4.928373"},
+{'lat':"52.279390",'lon':"4.926428"},
+{'lat':"52.279430",'lon':"4.926125"},
+{'lat':"52.279444",'lon':"4.926008"},
+{'lat':"52.279807",'lon':"4.925865"},
+{'lat':"52.280435",'lon':"4.925185"},
+{'lat':"52.280711",'lon':"4.924604"},
+{'lat':"52.280799",'lon':"4.923994"},
+{'lat':"52.280678",'lon':"4.921699"},
+{'lat':"52.280752",'lon':"4.921415"},
+     {'lat':"52.281003",'lon':"4.921004"},
+     {'lat':"52.281563",'lon':"4.920514"},
+     {'lat':"52.281940",'lon':"4.920412"},
+{'lat':"52.283168",'lon':"4.920759"},
+{'lat':"52.284314",'lon':"4.920489"},
+{'lat':"52.284740",'lon':"4.920285"},
+{'lat':"52.285034",'lon':"4.919871"},
+{'lat':"52.285318",'lon':"4.918846"},
+{'lat':"52.286215",'lon':"4.916584"},
+{'lat':"52.287242",'lon':"4.915737"},
+{'lat':"52.287859",'lon':"4.915526"},
+{'lat':"52.288040",'lon':"4.915536"},
+{'lat':"52.288471",'lon':"4.915634"},
+{'lat':"52.288558",'lon':"4.915656"},
+{'lat':"52.288932",'lon':"4.915798"},
+{'lat':"52.289326",'lon':"4.916197"},
+{'lat':"52.290006",'lon':"4.917172"},
+{'lat':"52.290492",'lon':"4.917585"},
+{'lat':"52.290683",'lon':"4.917658"},
+{'lat':"52.291015",'lon':"4.917675"},
+{'lat':"52.291426",'lon':"4.917603"},
+{'lat':"52.292138",'lon':"4.917210"},
+{'lat':"52.294005",'lon':"4.915601"},
+{'lat':"52.294122",'lon':"4.915424"},
+{'lat':"52.294262",'lon':"4.915265"},
+{'lat':"52.294397",'lon':"4.915223"},
+{'lat':"52.294549",'lon':"4.915399"},
+{'lat':"52.294994",'lon':"4.915968"},
+{'lat':"52.295033",'lon':"4.916035"},
+{'lat':"52.295036",'lon':"4.916343"},
+{'lat':"52.295156",'lon':"4.916477"},
+{'lat':"52.295292",'lon':"4.916438"},
+{'lat':"52.295535",'lon':"4.916975"},
+{'lat':"52.295535",'lon':"4.917206"},
+{'lat':"52.295658",'lon':"4.917321"},
+{'lat':"52.295728",'lon':"4.917291"},
+{'lat':"52.295781",'lon':"4.917206"},
+{'lat':"52.295781",'lon':"4.916975"},
+{'lat':"52.296246",'lon':"4.916584"},
+{'lat':"52.296673",'lon':"4.916132"},
+{'lat':"52.297345",'lon':"4.915317"},
+{'lat':"52.297497",'lon':"4.915116"},
+{'lat':"52.297561",'lon':"4.915118"},
+{'lat':"52.297796",'lon':"4.914841"},
+{'lat':"52.297764",'lon':"4.914307"},
+{'lat':"52.298052",'lon':"4.913910"},
+{'lat':"52.298597",'lon':"4.913312"},
+{'lat':"52.298985",'lon':"4.912832"},
+{'lat':"52.299204",'lon':"4.912451"},
+{'lat':"52.299325",'lon':"4.912461"},
+{'lat':"52.299380",'lon':"4.912283"},
+{'lat':"52.299352",'lon':"4.912182"},
+{'lat':"52.299316",'lon':"4.912137"},
+{'lat':"52.299283",'lon':"4.911953"},
+{'lat':"52.299407",'lon':"4.911904"},
+{'lat':"52.299710",'lon':"4.911506"},
+{'lat':"52.299802",'lon':"4.911393"},
+{'lat':"52.299866",'lon':"4.911297"},
+{'lat':"52.300063",'lon':"4.911054"},
+{'lat':"52.300779",'lon':"4.910494"},
+{'lat':"52.301012",'lon':"4.910343"},
+{'lat':"52.302458",'lon':"4.909765"},
+{'lat':"52.302254",'lon':"4.907809"},
+{'lat':"52.302354",'lon':"4.906509"},
+{'lat':"52.302367",'lon':"4.906444"},
+{'lat':"52.302511",'lon':"4.905917"},
+{'lat':"52.302864",'lon':"4.905268"},
+{'lat':"52.303300",'lon':"4.904192"},
+{'lat':"52.304152",'lon':"4.905526"},
+{'lat':"52.305029",'lon':"4.906618"},
+{'lat':"52.305461",'lon':"4.907292"},
+{'lat':"52.306375",'lon':"4.908152"},
+{'lat':"52.306511",'lon':"4.908264"},
+{'lat':"52.306588",'lon':"4.908327"},
+{'lat':"52.306910",'lon':"4.908430"},
+{'lat':"52.307925",'lon':"4.907912"},
+{'lat':"52.308526",'lon':"4.907277"},
+{'lat':"52.309114",'lon':"4.906663"},
+{'lat':"52.310276",'lon':"4.905932"},
+{'lat':"52.311212",'lon':"4.905752"},
+{'lat':"52.311667",'lon':"4.905756"},
+{'lat':"52.312400",'lon':"4.905950"},
+{'lat':"52.312635",'lon':"4.906073"},
+{'lat':"52.313686",'lon':"4.906664"},
+{'lat':"52.314084",'lon':"4.906728"},
+     {'lat':"52.314607",'lon':"4.906577"},
+{'lat':"52.315730",'lon':"4.906050"},
+{'lat':"52.316021",'lon':"4.906202"},
+{'lat':"52.316469",'lon':"4.906651"},
+{'lat':"52.317311",'lon':"4.909073"},
+{'lat':"52.317703",'lon':"4.909718"},
+{'lat':"52.317886",'lon':"4.909928"},
+{'lat':"52.318567",'lon':"4.910347"},
+{'lat':"52.318793",'lon':"4.910104"},
+{'lat':"52.319356",'lon':"4.909193"},
+{'lat':"52.319883",'lon':"4.907608"},
+{'lat':"52.320414",'lon':"4.905783"},
+{'lat':"52.320828",'lon':"4.904675"},
+{'lat':"52.321313",'lon':"4.903591"},
+{'lat':"52.321675",'lon':"4.902443"},
+{'lat':"52.321894",'lon':"4.900927"},
+{'lat':"52.321877",'lon':"4.899033"},
+{'lat':"52.321916",'lon':"4.898491"},
+{'lat':"52.322627",'lon':"4.896831"},
+{'lat':"52.322967",'lon':"4.896306"},
+{'lat':"52.323375",'lon':"4.896020"},
+{'lat':"52.323961",'lon':"4.895875"},
+{'lat':"52.324007",'lon':"4.895874"},
+{'lat':"52.324627",'lon':"4.896041"},
+{'lat':"52.326014",'lon':"4.896871"},
+{'lat':"52.326953",'lon':"4.897386"},
+{'lat':"52.327584",'lon':"4.897781"},
+{'lat':"52.327935",'lon':"4.897977"},
+{'lat':"52.329323",'lon':"4.899389"},
+{'lat':"52.329992",'lon':"4.899742"},
+{'lat':"52.330485",'lon':"4.899829"},
+{'lat':"52.330638",'lon':"4.899839"},
+{'lat':"52.331209",'lon':"4.899698"},
+{'lat':"52.331788",'lon':"4.899401"},
+{'lat':"52.332275",'lon':"4.899409"},
+{'lat':"52.332520",'lon':"4.899641"},
+{'lat':"52.332740",'lon':"4.900110"},
+{'lat':"52.332973",'lon':"4.900931"},
+{'lat':"52.332978",'lon':"4.901592"},
+{'lat':"52.332895",'lon':"4.902219"},
+{'lat':"52.332814",'lon':"4.903973"},
+{'lat':"52.332960",'lon':"4.905146"},
+{'lat':"52.333172",'lon':"4.906059"},
+{'lat':"52.333425",'lon':"4.906816"},
+{'lat':"52.333533",'lon':"4.907094"},
+{'lat':"52.334053",'lon':"4.908145"},
+{'lat':"52.334086",'lon':"4.908198"},
+{'lat':"52.334715",'lon':"4.908995"},
+{'lat':"52.335134",'lon':"4.909233"},
+{'lat':"52.335912",'lon':"4.909331"},
+{'lat':"52.336475",'lon':"4.909251"},];
+     function initialize() {
         var mapCanvas = document.getElementById('map');
         var mapOptions = {
           center: new google.maps.LatLng(52.37, 4.9),
@@ -15,59 +186,54 @@
         }
         var map = new google.maps.Map(mapCanvas, mapOptions);
 		var iconBase = "https://maps.google.com/mapfiles/kml/shapes/";
-		
-		/*
-		var myLatlng = new google.maps.LatLng(52.444, 4.666);
-		var marker = new google.maps.Marker({
-                position: myLatlng,
-                map: map,
-                });
-				
-				$.each( data.routes[0].legs[0].steps, function(i, value) {
-				console.log(i,value);
-                var myLatlng = new google.maps.LatLng(value.start_location.lat, value.start_location.lng);
-                var marker = new google.maps.Marker({
-                position: myLatlng,
-                map: map,
-               
-                });
-				
-				$.each( data, function(i, value) {
-				
-                var myLatlng = new google.maps.LatLng(value.lat, value.lon);
-                var marker = new google.maps.Marker({
-                position: myLatlng,
-                map: map,
-               
-                });
 
-            });
-		*/
-		
-		
-		var route = {{route}};
-		var on_route = {{on_route}};
-		var circles = {{circles}};
-		
-		function drawRoute(route, color) { 
-            
+		function drawRoute(route, color) {
 			//MARKERS
-			
-			$.each( route.steps, function(i, value) {
+            console.log(route);
+			$.each( route, function(i, value) {
 				console.log(i,value);
                 var myLatlng = new google.maps.LatLng(value.start_location.lat, value.start_location.lng);
                 var marker = new google.maps.Marker({
                 position: myLatlng,
                 map: map,
 				icon: iconBase + color
-               
+
+               });
+			});
+		};
+		function drawonRoute(route, color) {
+
+			//MARKERS
+
+			$.each( route, function(i, value) {
+                var myLatlng = new google.maps.LatLng(parseFloat(value.lat.value), parseFloat(value.lon.value));
+                console.log(myLatlng);
+                var marker = new google.maps.Marker({
+                position: myLatlng,
+                map: map,
+				icon: iconBase + color
+
+               });
+			});
+		};
+		function drawonRoutino(route, color) {
+
+			//MARKERS
+
+			$.each( route, function(i, value) {
+                console.log(value);
+                var myLatlng = new google.maps.LatLng(parseFloat(value.lat), parseFloat(value.lon));
+                var marker = new google.maps.Marker({
+                position: myLatlng,
+                map: map,
+				icon: iconBase + color
+
                });
 			});
 		};
 
-		
 		function drawCircles(circles) {
-			
+
 			//CIRCLES
 
 
@@ -81,23 +247,24 @@
 				  fillColor: "#FF0000",
 				  fillOpacity: 0.35,
 				  map: map,
-				  
+
 				  center: myLatlng,
-				  radius: 125
+				  radius: 100
 				});
 			});
 
 		};
-		
-		
-		
+
+
+	  //drawRoute(route, "schools_maps.png");
+	  //drawCircles(circles);
+	  //drawonRoute(on_route,"parking_lot_maps.png");
+      drawonRoutino(steps, 'parking_lot_maps.png');
+
       }
-	  drawMarkers(route, "schools_maps.png");
-	  drawCircles(circles);
-	  drawRoute(on_route);
       google.maps.event.addDomListener(window, "load", initialize);
     </script>
-  
+
   <body>
     <div id="map"></div>
   </body>
