--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -1,104 +1,65 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-	  <script src="http://code.jquery.com/jquery-latest.min.js"></script> 
-	  <script src="https://maps.googleapis.com/maps/api/js"></script>
-  <script>
-      function initialize() {
-        var mapCanvas = document.getElementById('map');
-        var mapOptions = {
-          center: new google.maps.LatLng(52.37, 4.9),
-          zoom: 12,
-          mapTypeId: google.maps.MapTypeId.ROADMAP
-        }
-        var map = new google.maps.Map(mapCanvas, mapOptions);
-		var iconBase = "https://maps.google.com/mapfiles/kml/shapes/";
-		
-		/*
-		var myLatlng = new google.maps.LatLng(52.444, 4.666);
-		var marker = new google.maps.Marker({
-                position: myLatlng,
-                map: map,
-                });
-				
-				$.each( data.routes[0].legs[0].steps, function(i, value) {
-				console.log(i,value);
-                var myLatlng = new google.maps.LatLng(value.start_location.lat, value.start_location.lng);
-                var marker = new google.maps.Marker({
-                position: myLatlng,
-                map: map,
-               
-                });
-				
-				$.each( data, function(i, value) {
-				
-                var myLatlng = new google.maps.LatLng(value.lat, value.lon);
-                var marker = new google.maps.Marker({
-                position: myLatlng,
-                map: map,
-               
-                });
-
-            });
-		*/
-		
-		
-		var route = {{route}};
-		var on_route = {{on_route}};
-		var circles = {{circles}};
-		
-		function drawRoute(route, color) { 
-            
-			//MARKERS
-			
-			$.each( route.steps, function(i, value) {
-				console.log(i,value);
-                var myLatlng = new google.maps.LatLng(value.start_location.lat, value.start_location.lng);
-                var marker = new google.maps.Marker({
-                position: myLatlng,
-                map: map,
-				icon: iconBase + color
-               
-               });
-			});
-		};
-
-		
-		function drawCircles(circles) {
-			
-			//CIRCLES
-
-
-			$.each (circles, function(i, value) {
-				// Add the circle for this city to the map.
-				var myLatlng = new google.maps.LatLng(value.lat, value.lon);
-				var cityCircle = new google.maps.Circle({
-				  strokeColor: "#FF0000",
-				  strokeOpacity: 0.8,
-				  strokeWeight: 2,
-				  fillColor: "#FF0000",
-				  fillOpacity: 0.35,
-				  map: map,
-				  
-				  center: myLatlng,
-				  radius: 125
-				});
-			});
-
-		};
-		
-		
-		
-      }
-	  drawMarkers(route, "schools_maps.png");
-	  drawCircles(circles);
-	  drawRoute(on_route);
-      google.maps.event.addDomListener(window, "load", initialize);
-    </script>
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script> 
+	<script src="http://openlayers.org/en/v3.10.1/build/ol.js" type="text/javascript"></script>
+	<script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+	
+	</head>
   
   <body>
-    <div id="map"></div>
+    <div id="map" style="width: 100%, height: 400px"></div>
+	<script>		
+		var route = {{route|tojson}};
+		var on_route = {{on_route|tojson}};
+		var circles = {{circles|tojson}};
+	  
+	    (function(){
+			var vectorSource = new ol.source.Vector({
+		//create empty vector
+		});
+		
+		//MARKERS
+		var i; //speciaal voor jim
+		for (i=0; i<route.length; ++i) {
+			var iconFeature = new ol.Feature({
+				geometry: new  
+			ol.geom.Point(ol.proj.transform([route[i].start_location.lng,route[i].start_location.lat], 'EPSG:4326',   'EPSG:3857')),
+			});
+			vectorSource.addFeature(iconFeature);
+		};
+		
+
+		
+		//create the style
+		var iconStyle = new ol.style.Style({
+		  image: new ol.style.Icon(/** @type {olx.style.IconOptions} */ ({
+			anchor: [0.5, 46],
+			anchorXUnits: 'fraction',
+			anchorYUnits: 'pixels',
+			opacity: 0.75,
+			src:'https://cdn1.iconfinder.com/data/icons/Map-Markers-Icons-Demo-PNG/256/Map-Marker-Marker-Outside-Pink.png',
+			offset: [0,20],
+			scale: 0.15,		
+			}))
+		});
+    
+	
+		//add the feature vector to the layer vector, and apply a style to whole layer
+		var vectorLayer = new ol.layer.Vector({
+		  source: vectorSource,
+		  style: iconStyle
+		});
+		
+		var map = new ol.Map({
+		  layers: [new ol.layer.Tile({ source: new ol.source.OSM() }), vectorLayer],
+		  target: document.getElementById('map'),
+		  view: new ol.View({
+			center: [0, 0],
+			zoom: 3
+		  })
+		});
+	})();
+    </script>
   </body>
 </html>
