--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,91 +2,94 @@
 <html>
   <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-	  <script src="http://code.jquery.com/jquery-latest.min.js"></script> 
-	  <script src="https://maps.googleapis.com/maps/api/js"></script>
-  <script>
-      function initialize() {
-        var mapCanvas = document.getElementById('map');
-        var mapOptions = {
-          center: new google.maps.LatLng(52.37, 4.9),
-          zoom: 12,
-          mapTypeId: google.maps.MapTypeId.ROADMAP
-        }
-        var map = new google.maps.Map(mapCanvas, mapOptions)
-		
-		/*
-		var myLatlng = new google.maps.LatLng(52.444, 4.666);
-		var marker = new google.maps.Marker({
-                position: myLatlng,
-                map: map,
-                });
-				
-				$.each( data.routes[0].legs[0].steps, function(i, value) {
-				console.log(i,value);
-                var myLatlng = new google.maps.LatLng(value.start_location.lat, value.start_location.lng);
-                var marker = new google.maps.Marker({
-                position: myLatlng,
-                map: map,
-               
-                });
-				
-				$.each( data, function(i, value) {
-				
-                var myLatlng = new google.maps.LatLng(value.lat, value.lon);
-                var marker = new google.maps.Marker({
-                position: myLatlng,
-                map: map,
-               
-                });
-
-            });
-		*/
-		
-		
-		
-		$.getJSON('route.json', function(data) { 
-            
-			//MARKERS
-			
-			$.each( data.routes[0].legs[0].steps, function(i, value) {
-				console.log(i,value);
-                var myLatlng = new google.maps.LatLng(value.start_location.lat, value.start_location.lng);
-                var marker = new google.maps.Marker({
-                position: myLatlng,
-                map: map,
-               
-               });
-			   });
-			
-			//CIRCLES
-			var circles = [{'lon': 4.8988442, 'lat': 52.3788428}, {'lon': 4.8979581, 'lat': 52.3785615}, {'lon': 4.897404, 'lat': 52.3782895}, {'lon': 4.8984162, 'lat': 52.3775544}, {'lon': 4.8987791, 'lat': 52.3772908}, {'lon': 4.8999721, 'lat': 52.3763491}, {'lon': 4.9000727, 'lat': 52.3751895}, {'lon': 4.9001212, 'lat': 52.3746302}, {'lon': 4.9001498, 'lat': 52.3743008}, {'lon': 4.9001686, 'lat': 52.3740838}, {'lon': 4.9004373, 'lat': 52.3720978}, {'lon': 4.9008102, 'lat': 52.3708888}, {'lon': 4.9009439, 'lat': 52.3704552}, {'lon': 4.9012271, 'lat': 52.3695367}, {'lon': 4.9003301, 'lat': 52.3688117}, {'lon': 4.9000085, 'lat': 52.3685517}, {'lon': 4.899327, 'lat': 52.3680008}, {'lon': 4.9004723, 'lat': 52.3664075}, {'lon': 4.9012177, 'lat': 52.3653705}, {'lon': 4.9017415, 'lat': 52.3646417}, {'lon': 4.9021297, 'lat': 52.3641015}, {'lon': 4.902429, 'lat': 52.3636851}, {'lon': 4.9026668, 'lat': 52.3633542}, {'lon': 4.9028602, 'lat': 52.3630851}, {'lon': 4.9030207, 'lat': 52.3628618}, {'lon': 4.9031559, 'lat': 52.3626736}, {'lon': 4.9056436, 'lat': 52.3596615}, {'lon': 4.9062561, 'lat': 52.3582263}, {'lon': 4.9065517, 'lat': 52.3575337}, {'lon': 4.9067257, 'lat': 52.3571259}, {'lon': 4.9068404, 'lat': 52.3568571}, {'lon': 4.9073984, 'lat': 52.3555496}, {'lon': 4.9086873, 'lat': 52.3537882}, {'lon': 4.9095781, 'lat': 52.3525706}, {'lon': 4.9102306, 'lat': 52.3516787}, {'lon': 4.9107292, 'lat': 52.3509972}, {'lon': 4.9111225, 'lat': 52.3504595}, {'lon': 4.9114408, 'lat': 52.3500245}, {'lon': 4.9117036, 'lat': 52.3496653}, {'lon': 4.9119242, 'lat': 52.3493636}, {'lon': 4.9121121, 'lat': 52.3491067}, {'lon': 4.9122741, 'lat': 52.3488854}, {'lon': 4.9124151, 'lat': 52.3486926}, {'lon': 4.9146191, 'lat': 52.345913}, {'lon': 4.916006, 'lat': 52.3451408}, {'lon': 4.9165987, 'lat': 52.3448108}, {'lon': 4.9169276, 'lat': 52.3446276}, {'lon': 4.9180763, 'lat': 52.343988}, {'lon': 4.9192643, 'lat': 52.3420208}, {'lon': 4.9202354, 'lat': 52.3404126}, {'lon': 4.9210441, 'lat': 52.3390732}, {'lon': 4.9217279, 'lat': 52.3379405}, {'lon': 4.9223138, 'lat': 52.3369701}, {'lon': 4.9228214, 'lat': 52.3361294}, {'lon': 4.9232653, 'lat': 52.335394}, {'lon': 4.9236568, 'lat': 52.3347454}, {'lon': 4.9240048, 'lat': 52.3341689}, {'lon': 4.924316, 'lat': 52.3336533}, {'lon': 4.9245961, 'lat': 52.3331893}, {'lon': 4.9248494, 'lat': 52.3327696}, {'lon': 4.9250797, 'lat': 52.3323882}, {'lon': 4.9252899, 'lat': 52.3320399}, {'lon': 4.9254825, 'lat': 52.3317207}, {'lon': 4.9256597, 'lat': 52.3314271}, {'lon': 4.9258233, 'lat': 52.3311561}, {'lon': 4.9259747, 'lat': 52.3309053}, {'lon': 4.9261153, 'lat': 52.3306723}, {'lon': 4.9262462, 'lat': 52.3304555}, {'lon': 4.9263683, 'lat': 52.3302531}, {'lon': 4.9264826, 'lat': 52.3300638}, {'lon': 4.9265897, 'lat': 52.3298863}, {'lon': 4.9299052, 'lat': 52.3243918}, {'lon': 4.9319496, 'lat': 52.3238689}, {'lon': 4.9329369, 'lat': 52.3236163}, {'lon': 4.9335186, 'lat': 52.3234675}, {'lon': 4.933902, 'lat': 52.3233694}, {'lon': 4.9363587, 'lat': 52.3230055}, {'lon': 4.9375796, 'lat': 52.321383}, {'lon': 4.9383452, 'lat': 52.3203656}, {'lon': 4.9388701, 'lat': 52.319668}, {'lon': 4.9392524, 'lat': 52.3191599}, {'lon': 4.9395433, 'lat': 52.3187734}, {'lon': 4.939772, 'lat': 52.3184694}, {'lon': 4.9399566, 'lat': 52.318224}, {'lon': 4.9401087, 'lat': 52.3180219}, {'lon': 4.9416847, 'lat': 52.315927}, {'lon': 4.9433162, 'lat': 52.3151647}, {'lon': 4.9441786, 'lat': 52.3147618}, {'lon': 4.9447119, 'lat': 52.3145126}, {'lon': 4.9450744, 'lat': 52.3143432}, {'lon': 4.9453367, 'lat': 52.3142206}, {'lon': 4.9455433, 'lat': 52.3130005}, {'lon': 4.9461539, 'lat': 52.3122501}]
-
-			$.each (circles, function(i, value) {
-				// Add the circle for this city to the map.
-				var myLatlng = new google.maps.LatLng(value.lat, value.lon);
-				var cityCircle = new google.maps.Circle({
-				  strokeColor: "#FF0000",
-				  strokeOpacity: 0.8,
-				  strokeWeight: 2,
-				  fillColor: "#FF0000",
-				  fillOpacity: 0.35,
-				  map: map,
-				  
-				  center: myLatlng,
-				  radius: 125
-				});
-			});
-
-		});
-		
-		
-		
-      }
-      google.maps.event.addDomListener(window, "load", initialize);
-    </script>
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script> 
+	<script src="http://openlayers.org/en/v3.10.1/build/ol.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="http://openlayers.org/en/v3.10.1/css/ol.css" type="text/css"> 
+</head>
+  
   
   <body>
-    <div id="map"></div>
+    <div id="map" style="width: 100%, height: 400px"></div>
+	<script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+	  
+	  <script>
+		(function(){
+    var vectorSource = new ol.source.Vector({
+      //create empty vector
+    });
+    
+    //create a bunch of icons and add to source vector
+	$.getJSON('route.json', function(data) { 
+            
+		//MARKERS
+		
+		$.each( data.routes[0].legs[0].steps, function(i, value) {
+			console.log(i,value);
+			var iconFeature = new ol.Feature({
+				geometry: new  
+            ol.geom.Point(ol.proj.transform([value.start_location.lat, value.start_location.lng], 'EPSG:4326',   'EPSG:3857')),
+			});
+			vectorSource.addFeature(iconFeature);
+		});
+	});
+    /*for (var i=0;i<50;i++){
+ 
+        var iconFeature = new ol.Feature({
+          geometry: new  
+            ol.geom.Point(ol.proj.transform([Math.random()*360-180, Math.random()*180-90], 'EPSG:4326',   'EPSG:3857')),
+        name: 'Null Island ' + i,
+        population: 4000,
+        rainfall: 500
+        });
+        vectorSource.addFeature(iconFeature);
+    }*/
+
+    //create the style
+    var iconStyle = new ol.style.Style({
+      image: new ol.style.Icon(/** @type {olx.style.IconOptions} */ ({
+        anchor: [0.5, 46],
+        anchorXUnits: 'fraction',
+        anchorYUnits: 'pixels',
+        opacity: 0.75,
+        src:'https://cdn1.iconfinder.com/data/icons/Map-Markers-Icons-Demo-PNG/256/Map-Marker-Marker-Outside-Pink.png',
+		scale: 0.15,		
+      }))
+    });
+
+
+
+    //add the feature vector to the layer vector, and apply a style to whole layer
+    var vectorLayer = new ol.layer.Vector({
+      source: vectorSource,
+      style: iconStyle
+    });
+	
+    var map = new ol.Map({
+      layers: [new ol.layer.Tile({ source: new ol.source.OSM() }), vectorLayer],
+      target: document.getElementById('map'),
+      view: new ol.View({
+        center: [0, 0],
+        zoom: 3
+      })
+    });
+})();
+	  </script>
   </body>
 </html>
+
+
+<!--
+$.getJSON('route.json', function(data) { 
+            
+		//MARKERS
+		
+		$.each( data.routes[0].legs[0].steps, function(i, value) {
+			console.log(i,value);
+			var myLatlng = new OpenLayers.LatLng(value.start_location.lat, value.start_location.lng)
+				.transform(
+					new OpenLayers.Projection("EPSG:4326"),
+					map.getProjectionObject());
+			markers.addMarker( new OpenLayers.Marker(myLatlng));
+		});
+	});
+-->
