--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -1,37 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<script src="http://code.jquery.com/jquery-latest.min.js"></script> 
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="http://openlayers.org/en/v3.10.1/build/ol.js" type="text/javascript"></script>
 	<script src="http://www.openlayers.org/api/OpenLayers.js"></script>
-	
+
 	</head>
-  
+
   <body>
     <div id="map" style="width: 100%, height: 400px"></div>
-	<script>		
-		var route = {{route|tojson}};
+	<script>
 		var on_route = {{on_route|tojson}};
-		var circles = {{circles|tojson}};
-	  
+
 	    (function(){
 			var vectorSource = new ol.source.Vector({
 		//create empty vector
 		});
-		
+
 		//MARKERS
 		var i; //speciaal voor jim
-		for (i=0; i<route.length; ++i) {
+		for (i=0; i<on_route.length; ++i) {
 			var iconFeature = new ol.Feature({
-				geometry: new  
-			ol.geom.Point(ol.proj.transform([route[i].start_location.lng,route[i].start_location.lat], 'EPSG:4326',   'EPSG:3857')),
+				geometry: new
+			ol.geom.Point(ol.proj.transform([route[i].lon,route[i].lat], 'EPSG:4326',   'EPSG:3857')),
 			});
 			vectorSource.addFeature(iconFeature);
 		};
 
-		
-
-		
 		//create the style
 		var iconStyle = new ol.style.Style({
 		  image: new ol.style.Icon(/** @type {olx.style.IconOptions} */ ({
@@ -41,17 +36,17 @@
 			opacity: 0.75,
 			src:'https://cdn1.iconfinder.com/data/icons/Map-Markers-Icons-Demo-PNG/256/Map-Marker-Marker-Outside-Pink.png',
 			offset: [0,20],
-			scale: 0.15,		
+			scale: 0.15,
 			}))
 		});
-    
-	
+
+
 		//add the feature vector to the layer vector, and apply a style to whole layer
 		var vectorLayer = new ol.layer.Vector({
 		  source: vectorSource,
 		  style: iconStyle
 		});
-		
+
 		var map = new ol.Map({
 		  layers: [new ol.layer.Tile({ source: new ol.source.OSM() }), vectorLayer],
 		  target: document.getElementById('map'),
