--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -22,7 +22,7 @@
 		for (i=0; i<on_route.length; ++i) {
 			var iconFeature = new ol.Feature({
 				geometry: new
-			ol.geom.Point(ol.proj.transform([route[i].lon,route[i].lat], 'EPSG:4326',   'EPSG:3857')),
+			ol.geom.Point(ol.proj.transform([parseFloat(on_route[i].lon), parseFloat(on_route[i].lat)], 'EPSG:4326',   'EPSG:3857')),
 			});
 			vectorSource.addFeature(iconFeature);
 		};
