--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -1,87 +1,162 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="http://openlayers.org/en/v3.10.1/build/ol.js" type="text/javascript"></script>
-	<script src="http://www.openlayers.org/api/OpenLayers.js"></script>
-
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	</head>
 
   <body>
-    <div id="map" style="width: 100%, height: 400px"></div>
-	<script>
-		var on_route = {{on_route|tojson}};
-        var step_points = {{step_points|tojson}};
+    <div class="container">
+        <div class="row">
+          <div class="col-md-4"></div>
+          <div class="col-md-4">
+                <div class="" method="post">
+                    <h2 class="form-signin-heading">Scenic Route in Amsterdam</h2>
+                    <label for="inputStart" class="sr-only">Start</label>
+                    <input type="start" id="inputStart" class="form-control" placeholder="Starting location" required autofocus>
+                    <label for="inputDestination" class="sr-only">Destination</label>
+                    <input type="destination" id="inputDestination" class="form-control" placeholder="Destination" required>
+                    <button class="btn btn-lg btn-primary" onClick='get_route();'>Locate my Route</button>
+                </div>
+            </div>
+         </div>
+        <div id="map" style="width: 100%, height: 400px"></div>
+     </div>
+        <script src='{{ url_for("static", filename="js/ol.js") }}' type='text/javascript'></script>
+        <script>
 
-	    (function(){
-			var vectorSource = new ol.source.Vector();
-            var stepsource = new ol.source.Vector();
+var map;
+var on_route;
+var iconStyle = new ol.style.Style({
+    image: new ol.style.Icon(/** @type {olx.style.IconOptions} */ ({
+    anchor: [0.5, 46],
+    anchorXUnits: 'fraction',
+    anchorYUnits: 'pixels',
+    opacity: 0.75,
+    src:'https://cdn1.iconfinder.com/data/icons/Map-Markers-Icons-Demo-PNG/256/Map-Marker-Marker-Outside-Pink.png',
+    offset: [0,20],
+    scale: 0.15,
+    }))
+});
 
-		//MARKERS
-		var i; //speciaal voor jim
-		for (i=0; i<on_route.length; ++i) {
-			var iconFeature = new ol.Feature({
-				geometry: new
-			ol.geom.Point(ol.proj.transform([on_route[i].lon, on_route[i].lat], 'EPSG:4326',   'EPSG:3857')),
-			});
-			vectorSource.addFeature(iconFeature);
-		};
+var stepStyle = new ol.style.Style({
+    image: new ol.style.Icon(/** @type {olx.style.IconOptions} */ ({
+    anchor: [0.5, 46],
+    anchorXUnits: 'fraction',
+    anchorYUnits: 'pixels',
+    opacity: 0.75,
+    src:'https://cdn0.iconfinder.com/data/icons/gcons-2/9/point1-128.png',
+    offset: [0,20],
+    scale: 0.15,
+    }))
+});
 
-		var i; //speciaal voor jim
-		for (i=0; i<step_points.length; ++i) {
-			var iconFeature = new ol.Feature({
-				geometry: new
-			ol.geom.Point(ol.proj.transform([step_points[i][1], step_points[i][0]], 'EPSG:4326',   'EPSG:3857')),
-			});
-			stepsource.addFeature(iconFeature);
-		};
+var vectorSource = new ol.source.Vector();
+var stepsource = new ol.source.Vector();
+var lineSource = new ol.source.Vector();
+var vectorLayer = new ol.layer.Vector({
+source: vectorSource,
+style: iconStyle,
+});
 
-		//create the style
-		var iconStyle = new ol.style.Style({
-		  image: new ol.style.Icon(/** @type {olx.style.IconOptions} */ ({
-			anchor: [0.5, 46],
-			anchorXUnits: 'fraction',
-			anchorYUnits: 'pixels',
-			opacity: 0.75,
-			src:'https://cdn1.iconfinder.com/data/icons/Map-Markers-Icons-Demo-PNG/256/Map-Marker-Marker-Outside-Pink.png',
-			offset: [0,20],
-			scale: 0.15,
-			}))
-		});
+var stepLayer = new ol.layer.Vector({
+source: stepsource,
+style: stepStyle,
+});
 
-		var stepStyle = new ol.style.Style({
-		  image: new ol.style.Icon(/** @type {olx.style.IconOptions} */ ({
-			anchor: [0.5, 46],
-			anchorXUnits: 'fraction',
-			anchorYUnits: 'pixels',
-			opacity: 0.75,
-			src:'https://cdn0.iconfinder.com/data/icons/gcons-2/9/point1-128.png',
-			offset: [0,20],
-			scale: 0.15,
-			}))
-		});
+var lineLayer = new ol.layer.Vector({
+    source: lineSource,
+    style: new ol.style.Style({
+        fill: new ol.style.Fill({color: '#00FF00', weight: 4}),
+        stroke: new ol.style.Stroke({ color: '#00FF00', width: 2}),
+    })
 
+});
+function get_route() {
+    var start = $('#inputStart').val();
+    var dest = $('#inputDestination').val();
+    console.log(start);
+    $.ajax({type: "POST",
+            url: '/route',
+            data: {'start': start, 'dest': dest},
+            success: drawRoute,
+    })
+}
+function drawRoute(data){
+    map.removeLayer(vectorLayer);
+    map.removeLayer(stepLayer);
+    map.removeLayer(lineLayer);
 
-		//add the feature vector to the layer vector, and apply a style to whole layer
-		var vectorLayer = new ol.layer.Vector({
-		  source: vectorSource,
-		  style: iconStyle,
-		});
+    vectorSource = new ol.source.Vector();
+    stepsource = new ol.source.Vector();
+    lineSource = new ol.source.Vector();
+    vectorLayer = new ol.layer.Vector({
+    source: vectorSource,
+    style: iconStyle,
+    });
 
-		var stepLayer = new ol.layer.Vector({
-		  source: stepsource,
-		  style: stepStyle,
-		});
+    stepLayer = new ol.layer.Vector({
+    source: stepsource,
+    style: stepStyle,
+    });
 
-		var map = new ol.Map({
-		  layers: [new ol.layer.Tile({ source: new ol.source.OSM() }), vectorLayer, stepLayer],
-		  target: document.getElementById('map'),
-		  view: new ol.View({
-			center: [0, 0],
-			zoom: 3
-		  })
-		});
-	})();
-    </script>
+    lineLayer = new ol.layer.Vector({
+        source: lineSource,
+        style: new ol.style.Style({
+            fill: new ol.style.Fill({color: '#00FF00', weight: 4}),
+            stroke: new ol.style.Stroke({ color: '#00FF00', width: 2}),
+        })
+
+    });
+
+    on_route = data.route;
+    var step_points = data.step_points;
+    console.log(on_route.length);
+    var i; //speciaal voor jim
+    for (i=0; i<on_route.length; ++i) {
+        cur_point = ol.proj.transform([on_route[i].lon, on_route[i].lat], 'EPSG:4326',   'EPSG:3857')
+        var iconFeature = new ol.Feature({
+            geometry: new ol.geom.Point(cur_point),
+        });
+        vectorSource.addFeature(iconFeature);
+
+        if (i != on_route.length - 1) {
+            var j = i + 1;
+            console.log(j);
+            var next_point = ol.proj.transform([on_route[j].lon, on_route[j].lat], 'EPSG:4326',   'EPSG:3857')
+            var line = new ol.Feature({
+                geomentry: new ol.geom.LineString([cur_point, next_point])
+            });
+            console.log(line);
+            lineSource.addFeature(line);
+        }
+    };
+    /*
+    var i; //speciaal voor jim
+    for (i=0; i<step_points.length; ++i) {
+        var iconFeature = new ol.Feature({
+            geometry: new
+        ol.geom.Point(ol.proj.transform([step_points[i][1], step_points[i][0]], 'EPSG:4326',   'EPSG:3857')),
+        });
+        stepsource.addFeature(iconFeature);
+    };*/
+
+    //create the style
+    map.addLayer(vectorLayer);
+    map.addLayer(stepLayer);
+    map.addLayer(lineLayer);
+
+}
+
+(function(){
+map = new ol.Map({
+        layers: [new ol.layer.Tile({ source: new ol.source.OSM() })],
+        target: document.getElementById('map'),
+        view: new ol.View({
+            center: [0, 0],
+            zoom: 3
+        })
+        });
+})();
+</script>
   </body>
 </html>
